unpackaged/main/default/objects/Account/fields/Count_of_Recurring_Billing_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Recurring_Billing_Lines__c</fullName>
    <label>Count of Recurring Billing Lines</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>