unpackaged/main/default/objects/Account/fields/Created_In__c.field-meta.xml
<CustomField>
    <fullName>Created_In__c</fullName>
    <label>Created_In</label>
    <length>10</length>
    <type>Text</type>
</CustomField>