unpackaged/main/default/objects/Account/fields/Credit_Hold_Banner__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold_Banner__c</fullName>
    <formula>IF( Support_Service_Credit_Hold__c = True, IMAGE("/servlet/servlet.FileDownload?file=01540000002jafW", "Red"), "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Hold Banner</label>
    <type>Text</type>
</CustomField>