unpackaged/main/default/objects/Account/fields/Customer_Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Branch_Number__c</fullName>
    <description>Used to store customer's branch identification for looking up account when customer calls support etc.</description>
    <label>Customer Branch Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>