unpackaged/main/default/objects/Account/fields/Customer_Custom_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Custom_Account_Number__c</fullName>
    <description>Rev.io Custom Account Number</description>
    <formula>LEFT(Name,6) + "-" + ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer_Custom_Account_Number</label>
    <type>Text</type>
</CustomField>