unpackaged/main/default/objects/Account/fields/Customer_id__c.field-meta.xml
<CustomField>
    <fullName>Customer_id__c</fullName>
    <description>Rev.io Customer ID Number</description>
    <label>Customer_Id</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>