unpackaged/main/default/objects/Account/fields/Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Date__c</fullName>
    <description>Rev.io</description>
    <label>Cycle_Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>