unpackaged/main/default/objects/Account/fields/Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Method__c</fullName>
    <label>Default Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
                <default>true</default>
                <label>Check</label>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>