unpackaged/main/default/objects/Account/fields/Display_CDRs__c.field-meta.xml
<CustomField>
    <fullName>Display_CDRs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import CDRs</label>
    <type>Checkbox</type>
</CustomField>