unpackaged/main/default/objects/Account/fields/DSCORGPKG__DiscoverOrg_ID__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
    <description>DiscoverOrg DB object ID</description>
    <label>DiscoverOrg ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>