unpackaged/main/default/objects/Account/fields/DSCORGPKG__DiscoverOrg_LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DiscoverOrg_LastUpdate__c</fullName>
    <label>DiscoverOrg Last Update</label>
    <type>DateTime</type>
</CustomField>