unpackaged/main/default/objects/Account/fields/DSCORGPKG__DO_3yr_Employees_Growth__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DO_3yr_Employees_Growth__c</fullName>
    <label>3yr Employees Growth %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>