unpackaged/main/default/objects/Account/fields/DSCORGPKG__Exclude_Update__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Exclude_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User can use this checkbox to exclude record from getting updated from DiscoverOrg.</description>
    <label>Exclude from DiscoverOrg Auto Updates</label>
    <type>Checkbox</type>
</CustomField>