unpackaged/main/default/objects/Account/fields/DSCORGPKG__Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Fiscal_Year_End__c</fullName>
    <label>Fiscal Year End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>