unpackaged/main/default/objects/Account/fields/Emergency_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Routing_Number__c</fullName>
    <description>Emergency Routing Number</description>
    <label>Emergency Routing Number</label>
    <length>26</length>
    <type>Text</type>
</CustomField>