unpackaged/main/default/objects/Account/fields/EON_Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>EON_Initial_Contact__c</fullName>
    <label>EON Initial Contact</label>
    <type>Date</type>
</CustomField>