unpackaged/main/default/objects/Account/fields/EON_System_Type__c.field-meta.xml
<CustomField>
    <fullName>EON_System_Type__c</fullName>
    <label>EON System Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>