unpackaged/main/default/objects/Account/fields/ESN__c.field-meta.xml
<CustomField>
    <fullName>ESN__c</fullName>
    <description>Rev.io ESN field</description>
    <label>ESN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>