unpackaged/main/default/objects/Account/fields/Federal_Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID_Number__c</fullName>
    <label>Federal Tax ID Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>