unpackaged/main/default/objects/Account/fields/Fiber_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Terminal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiber Terminal</label>
    <referenceTo>Fiber_Terminal__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>