unpackaged/main/default/objects/Account/fields/Fiber_Terminal_Spatial_Key__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Terminal_Spatial_Key__c</fullName>
    <formula>Fiber_Terminal__r.Spatial_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiber Terminal Spatial Key</label>
    <type>Text</type>
</CustomField>