unpackaged/main/default/objects/Account/fields/Financial_Partner__c.field-meta.xml
<CustomField>
    <fullName>Financial_Partner__c</fullName>
    <label>Financial Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contract Capital</fullName>
            </value>
            <value>
                <fullName>Great America</fullName>
            </value>
            <value>
                <fullName>IPro Media</fullName>
            </value>
            <value>
                <fullName>Texas Star Bank</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>