unpackaged/main/default/objects/Account/fields/Financial_Partner_Batch__c.field-meta.xml
<CustomField>
    <fullName>Financial_Partner_Batch__c</fullName>
    <description>Financial Partner Batch</description>
    <inlineHelpText>Wildcard label to batch Accounts to Financial Partners.</inlineHelpText>
    <label>Financial Partner Batch</label>
    <length>25</length>
    <type>Text</type>
</CustomField>