unpackaged/main/default/objects/Account/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First_Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>