unpackaged/main/default/objects/Account/fields/FLAGS__AcctTimeOffset3__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__AcctTimeOffset3__c</fullName>
    <label>Case Flags Age 3 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>