unpackaged/main/default/objects/Account/fields/FNB_Billing_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>FNB_Billing_Location_ID__c</fullName>
    <formula>Customer_Branch_Number__c  + "-" +  Account_Alias__c +"-"+ ShippingStreet+" "+ShippingCity+", "+ShippingState+" "+ ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FNB Billing Location ID Text</label>
    <type>Text</type>
</CustomField>