unpackaged/main/default/objects/Account/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <label>Gateway</label>
    <length>30</length>
    <type>Text</type>
</CustomField>