unpackaged/main/default/objects/Account/fields/Hot_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hot_Notes__c</fullName>
    <inlineHelpText>Used to enter notes for Operations to see pertaining to the account.</inlineHelpText>
    <label>Hot Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>