unpackaged/main/default/objects/Account/fields/Import_Batch__c.field-meta.xml
<CustomField>
    <fullName>Import_Batch__c</fullName>
    <label>Import Batch</label>
    <length>20</length>
    <type>Text</type>
</CustomField>