unpackaged/main/default/objects/Account/fields/Install_Tech_2__c.field-meta.xml
<CustomField>
    <fullName>Install_Tech_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Install Tech 2</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Division</field>
            <operation>equals</operation>
            <value>Installation</value>
        </filterItems>
        <filterItems>
            <field>User.Department</field>
            <operation>equals</operation>
            <value>Operations</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_Install_Tech2</relationshipName>
    <type>Lookup</type>
</CustomField>