unpackaged/main/default/objects/Account/fields/JCSoftware__test_date__c.field-meta.xml
<CustomField>
    <fullName>JCSoftware__test_date__c</fullName>
    <label>PowerClone Test Field</label>
    <type>Date</type>
</CustomField>