unpackaged/main/default/objects/Account/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Rev.io Last Name</description>
    <label>Last_Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>