unpackaged/main/default/objects/Account/fields/Late_Fee_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Exempt__c</fullName>
    <description>Rev.io Late_Fee_Exempt</description>
    <label>Late_Fee_Exempt</label>
    <length>5</length>
    <type>Text</type>
</CustomField>