unpackaged/main/default/objects/Account/fields/Listing_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Listing_Address_1__c</fullName>
    <formula>ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing_Address_1</label>
    <type>Text</type>
</CustomField>