unpackaged/main/default/objects/Account/fields/Listing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Listing_Address_2__c</fullName>
    <formula>""</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing_Address_2</label>
    <type>Text</type>
</CustomField>