unpackaged/main/default/objects/Account/fields/Listing_Address_Unparsed__c.field-meta.xml
<CustomField>
    <fullName>Listing_Address_Unparsed__c</fullName>
    <description>Rev.io Listing_Address_Unparsed</description>
    <label>Listing_Address_Unparsed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>