unpackaged/main/default/objects/Account/fields/Listing_City__c.field-meta.xml
<CustomField>
    <fullName>Listing_City__c</fullName>
    <formula>ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing_City</label>
    <type>Text</type>
</CustomField>