unpackaged/main/default/objects/Account/fields/Listing_State__c.field-meta.xml
<CustomField>
    <fullName>Listing_State__c</fullName>
    <formula>ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing_State</label>
    <type>Text</type>
</CustomField>