unpackaged/main/default/objects/Account/fields/Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image__c</fullName>
    <formula>IF(ISBLANK(Logo_URL__c),"No Logo Added", 
IMAGE(Logo_URL__c , "Client Logo"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Image</label>
    <type>Text</type>
</CustomField>