unpackaged/main/default/objects/Account/fields/Master_Billing_for_Parent__c.field-meta.xml
<CustomField>
    <fullName>Master_Billing_for_Parent__c</fullName>
    <description>##Conga created btn:00b40000000lLhh</description>
    <formula>"&amp;id=" + Id +
"&amp;reportid=00O40000004PSmw?pv1=" + Id +
"&amp;templateid=a014000000YeM4D" + 
"&amp;excelautofitcolumns=1" + 
"&amp;defaultpdf=1" + 
"&amp;qmode=Download" + 
"&amp;ocnr=1"</formula>
    <label>Master Billing for Parent</label>
    <type>Text</type>
</CustomField>