unpackaged/main/default/objects/Account/fields/MDN__c.field-meta.xml
<CustomField>
    <fullName>MDN__c</fullName>
    <description>Rev.io MDN</description>
    <label>MDN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>