unpackaged/main/default/objects/Account/fields/MiCC_ARID__c.field-meta.xml
<CustomField>
    <fullName>MiCC_ARID__c</fullName>
    <label>MiCC ARID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>