unpackaged/main/default/objects/Account/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>Rev.io Middle Name</description>
    <label>Middle_Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>