unpackaged/main/default/objects/Account/fields/MiVoice_Call_Recording_ARID__c.field-meta.xml
<CustomField>
    <fullName>MiVoice_Call_Recording_ARID__c</fullName>
    <label>MiVoice Call Recording ARID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>