unpackaged/main/default/objects/Account/fields/MLA_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>MLA_Monthly_Rent__c</fullName>
    <label>Monthly Rent</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>