unpackaged/main/default/objects/Account/fields/MLA_Net_Solutions_Account__c.field-meta.xml
<CustomField>
    <fullName>MLA_Net_Solutions_Account__c</fullName>
    <label>Net Solutions Account</label>
    <length>25</length>
    <type>Text</type>
</CustomField>