unpackaged/main/default/objects/Account/fields/MLA_System_Type__c.field-meta.xml
<CustomField>
    <fullName>MLA_System_Type__c</fullName>
    <label>System Type</label>
    <length>35</length>
    <type>Text</type>
</CustomField>