unpackaged/main/default/objects/Account/fields/MLA_Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>MLA_Total_Payment__c</fullName>
    <label>Total Payment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>