unpackaged/main/default/objects/Account/fields/MLA_TSP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MLA_TSP_Start_Date__c</fullName>
    <label>TSP Start Date</label>
    <type>Date</type>
</CustomField>