unpackaged/main/default/objects/Account/fields/Node_Element_ID__c.field-meta.xml
<CustomField>
    <fullName>Node_Element_ID__c</fullName>
    <description>Mitel Node Element ID.</description>
    <label>Node Element ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>