unpackaged/main/default/objects/Account/fields/Opp_Count_All__c.field-meta.xml
<CustomField>
    <fullName>Opp_Count_All__c</fullName>
    <description>Counts all Opportunities irregardless of Stage associated with the account.</description>
    <label>Opp Count All</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>