unpackaged/main/default/objects/Account/fields/Parent_Customer_id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Customer_id__c</fullName>
    <description>Rev.io Parent_Customer_id</description>
    <label>Parent_Customer_id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>