unpackaged/main/default/objects/Account/fields/Past_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Amount__c</fullName>
    <label>Past Due Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>