unpackaged/main/default/objects/Account/fields/Phone_Business_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_Business_2__c</fullName>
    <description>Additional Phone number for the account</description>
    <label>Phone Business 2</label>
    <type>Phone</type>
</CustomField>