unpackaged/main/default/objects/Account/fields/RB_Active__c.field-meta.xml
<CustomField>
    <fullName>RB_Active__c</fullName>
    <formula>!OR( Closed_Opportunity_Products__c &lt;&gt; 0,  RB_Total_Monthly_Charge__c &lt;&gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RB Active</label>
    <type>Checkbox</type>
</CustomField>