unpackaged/main/default/objects/Account/fields/RB_Total_Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>RB_Total_Monthly_Charge__c</fullName>
    <label>RB Total Monthly Charge</label>
    <summarizedField>Recurring_Billing_Master__c.Total_Monthly_Charge__c</summarizedField>
    <summaryForeignKey>Recurring_Billing_Master__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>