unpackaged/main/default/objects/Account/fields/RCT_Last_QBR_Date__c.field-meta.xml
<CustomField>
    <fullName>RCT_Last_QBR_Date__c</fullName>
    <inlineHelpText>This field is automatically populated when a QBR type Account Profile record is Completed</inlineHelpText>
    <label>Last QBR Date</label>
    <type>Date</type>
</CustomField>