unpackaged/main/default/objects/Account/fields/RCT_Next_QBR_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RCT_Next_QBR_Due_Date__c</fullName>
    <defaultValue>TODAY() + 90</defaultValue>
    <inlineHelpText>Calculated based on the Last QBR Completed Date for this Account, plus 90 Days.</inlineHelpText>
    <label>Next QBR Due Date</label>
    <type>Date</type>
</CustomField>