unpackaged/main/default/objects/Account/fields/Recurring_Billing_Lines_Count__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Lines_Count__c</fullName>
    <label>Recurring Billing Lines Count</label>
    <summarizedField>Opportunity.Recurring_Billing_Line_Items_Count__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>