unpackaged/main/default/objects/Account/fields/Recurring_Billing_Monthly_Total__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Monthly_Total__c</fullName>
    <label>Recurring Billing Monthly Total</label>
    <summarizedField>Recurring_Billing__c.Total_Monthly_Charge__c</summarizedField>
    <summaryForeignKey>Recurring_Billing__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>