unpackaged/main/default/objects/Account/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>Rev.io Relationship_Type</description>
    <label>Relationship_Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>