unpackaged/main/default/objects/Account/fields/rh2__testCurrency__c.field-meta.xml
<CustomField>
    <fullName>rh2__testCurrency__c</fullName>
    <label>Currency Test</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>