unpackaged/main/default/objects/Account/fields/Send_PO_Notification_Email_To_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Send_PO_Notification_Email_To_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send PO Notification Email To Vendor</label>
    <type>Checkbox</type>
</CustomField>