unpackaged/main/default/objects/Account/fields/Server_MBG_1__c.field-meta.xml
<CustomField>
    <fullName>Server_MBG_1__c</fullName>
    <label>Server-MBG 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>