unpackaged/main/default/objects/Account/fields/Server_MCD_ARID__c.field-meta.xml
<CustomField>
    <fullName>Server_MCD_ARID__c</fullName>
    <label>MiVoice ARID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>