unpackaged/main/default/objects/Account/fields/Server_MiContactCenter__c.field-meta.xml
<CustomField>
    <fullName>Server_MiContactCenter__c</fullName>
    <label>Server-MiCC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>