unpackaged/main/default/objects/Account/fields/Server_Oaisys__c.field-meta.xml
<CustomField>
    <fullName>Server_Oaisys__c</fullName>
    <label>MiVoice Call Recording (Oaisys)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>