unpackaged/main/default/objects/Account/fields/Server_ULM_ARID__c.field-meta.xml
<CustomField>
    <fullName>Server_ULM_ARID__c</fullName>
    <label>ULM ARID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>