unpackaged/main/default/objects/Account/fields/Service_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_1__c</fullName>
    <formula>ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service_Address_1</label>
    <type>Text</type>
</CustomField>