unpackaged/main/default/objects/Account/fields/Service_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_2__c</fullName>
    <description>Rev.io Service Address 2</description>
    <label>Service_Address_2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>