unpackaged/main/default/objects/Account/fields/Service_Address_Unparsed__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Unparsed__c</fullName>
    <description>Rev.io Service_Address_Unparsed</description>
    <label>Service_Address_Unparsed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>