unpackaged/main/default/objects/Account/fields/Service_City__c.field-meta.xml
<CustomField>
    <fullName>Service_City__c</fullName>
    <formula>ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service_City</label>
    <type>Text</type>
</CustomField>