unpackaged/main/default/objects/Account/fields/Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Notes__c</fullName>
    <label>Case Service Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>