unpackaged/main/default/objects/Account/fields/Service_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Zip_Code__c</fullName>
    <formula>ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service_Zip_Code</label>
    <type>Text</type>
</CustomField>