unpackaged/main/default/objects/Account/fields/Shipping_City_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City_State__c</fullName>
    <formula>ShippingState + "-" +  ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping City-State</label>
    <type>Text</type>
</CustomField>