unpackaged/main/default/objects/Account/fields/SourceID__c.field-meta.xml
<CustomField>
    <fullName>SourceID__c</fullName>
    <externalId>true</externalId>
    <label>SourceID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>