unpackaged/main/default/objects/Account/fields/SRC__c.field-meta.xml
<CustomField>
    <fullName>SRC__c</fullName>
    <description>SRC Recording per B Stookey</description>
    <label>SRC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>