unpackaged/main/default/objects/Account/fields/Statement_Print_Type__c.field-meta.xml
<CustomField>
    <fullName>Statement_Print_Type__c</fullName>
    <description>Rev.io Statement_Print_Type</description>
    <label>Statement_Print_Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>