unpackaged/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Rev.io Status</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>